--- a/registro_de_maquina.html
+++ b/registro_de_maquina.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Formulario de Mantenimiento</title>
+  <title>REGISTRO DE MAQUINA</title>
 </head>
 <body>
   <img src="/IMG/LOGO P.png" alt="LOGO" width="150">
 
-  <h2>Formulario de Mantenimiento</h2>
+  <h2>REGISTRO DE MAQUINA</h2>
   <div class="container">
     <form id="mantenimientoForm" onsubmit="return validarFormulario()">
       <label for="nombreMaquina">Nombre de Máquina:</label>
