--- a/registro_de_maquina.html
+++ b/registro_de_maquina.html
@@ -38,7 +38,7 @@
 
       <label for="estadoMantenimiento">Estado de Mantenimiento:</label>
       <input type="text" id="estadoMantenimiento" name="estadoMantenimiento" required>
-
+      <button type="button" onclick="verHistorial1()">Ver Historial</button>
       <button type="button" onclick="enviarFormulario()">Enviar</button>
     </form>
   </div>
