todas las vistas

--- a/generacion_ticket.html
+++ b/generacion_ticket.html
@@ -23,9 +23,10 @@
         
         <button type="button" onclick="generarTicket()">Generar Ticket</button>
         <button type="button" onclick="continuarAMantenimiento()">Continuar</button>
+
     </form>
 
-    <script src="./scripts/generar_ticket.js"></script>
+    <script src="scripts.js"></script>
   </div>
 </body>
 </html>
