--- a/finalizacion.html
+++ b/finalizacion.html
@@ -11,8 +11,12 @@
   <img src="/IMG/LOGO P.png" alt="LOGO" width="150">
 
   <h2>Proceso Finalizado</h2>
+  <div class="container">
+  <form>
 
-  <p>El proceso ha sido rechazado.</p>  
+  <p>El proceso ha sido Finalizado.</p>  
+  </form>
+</div>
 
 </body>
 </html>
