registro de ususarios

--- a/login.html
+++ b/login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/public/css/style.css">
     <title>Inicio de Sesión</title>
 </head>
 <body>
-    <img src="/IMG/LOGO P.png" alt="LOGO" width="150">
+    <img src="/public/IMG/LOGO P.png" alt="LOGO" width="150">
     <div class="container">
         <form id="loginForm">
             <h2>Login</h2>
@@ -21,6 +21,6 @@
             <button type="button" onclick="forgotPassword()">Olvidó su contraseña</button>
         </form>
     </div>
-    <script src="/scripts.js"></script>
+    <script src="public/scripts.js"></script>
 </body>
 </html>
