separacion de modulos

--- a/login.html
+++ b/login.html
@@ -21,6 +21,6 @@
             <button type="button" onclick="forgotPassword()">Olvidó su contraseña</button>
         </form>
     </div>
-    <script src="public/scripts.js"></script>
+    <script src="public/JS/login.js"></script>
 </body>
 </html>
