--- a/registro.html
+++ b/registro.html
@@ -43,6 +43,6 @@
     
     </form>
   </div>
-  <script src="/public/scripts.js"></script>
+  <script src="/public/JS/scripts.js"></script>
 </body>
 </html>
