--- a/registro.html
+++ b/registro.html
@@ -12,7 +12,7 @@
   <h2>Registro de Usuario</h2>
   <div class="container">
     <form id="registerForm" action="http://localhost:3000/registro" method="post">
-
+      <div id="messageContainer"></div>
       <label for="nombre">Nombre Completo:</label>
       <input type="text" id="nombre" name="nombre" required>
 
@@ -43,6 +43,6 @@
     
     </form>
   </div>
-  <script src="/public/JS/scripts.js"></script>
+  <script src="public/JS/scripts.js"></script>
 </body>
 </html>
