--- a/diagnostico.html
+++ b/diagnostico.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./public/css/style.css">
   
   <title>Diagnóstico Inicial</title>
   </head>
 <body>
-  <img src="/IMG/LOGO P.png" alt="LOGO" width="150">
+  <img src="public/IMG/LOGO P.png" alt="LOGO" width="150">
 
 
   <h2>Diagnóstico Inicial</h2>
@@ -23,6 +23,6 @@
         </form>
     </div>    
 
-  <script src="./scripts.js"></script>
+  <script src="public/JS/js.js"></script>
 </body>
 </html>
