--- a/insumos_repuestos.html
+++ b/insumos_repuestos.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="public/css/style.css">
   <title>Insumos y Repuestos</title>
 </head>
 <body>
+  <img src="/public/IMG/LOGO P.png" alt="LOGO" width="150">
   <h2>Insumos y Repuestos Utilizados</h2>
   <div class="container">
     <form id="insumosRepuestosForm">
@@ -33,6 +34,6 @@
     </div>
   </div>
 
-  <script src="./scripts.js"></script>
+  <script src="public/JS/js.js"></script>
 </body>
 </html>
