--- a/generacion_ticket.html
+++ b/generacion_ticket.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="public/css/style.css">
   <title>Generación de Ticket</title>
 </head>
 <body>
-  <img src="/IMG/LOGO P.png" alt="LOGO" width="150">
+  <img src="public/IMG/LOGO P.png" alt="LOGO" width="150">
 
   <h2>Generación de Ticket</h2>
   <div class="container">
@@ -26,7 +26,7 @@
 
     </form>
 
-    <script src="scripts.js"></script>
+    <script src="public/JS/js.js"></script>
   </div>
 </body>
 </html>
