--- a/historial_maquina.html
+++ b/historial_maquina.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
     <title>Historial de Máquina</title>
   </head>
   <body>
-    <img src="/IMG/LOGO P.png" alt="LOGO" width="150">
+    <img src="public/IMG/LOGO P.png" alt="LOGO" width="150">
   
     <h2>Historial de Máquina</h2>
     <div class="container">
@@ -25,6 +25,6 @@
    
    
 
-   <script src="/scripts.js"></script>
+   <script src="public/JS/js.js"></script>
 </body>
 </html>
