--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="public/css/style.css">
   <title>Mantenimiento</title>
 </head>
 <body>
-  <img src="/IMG/LOGO P.png" alt="LOGO" width="150">
+  <img src="public/IMG/LOGO P.png" alt="LOGO" width="150">
 
   <h2>Mantenimiento</h2>
   <div class="container" id="mantenimientoContainer">
@@ -30,7 +30,7 @@
         </form>    
     </div>
 
-  <script src="./scripts.js">
+  <script src="public/JS/js.js">
     obtenerNumeroTicket();
   </script>
 </body>
