REGISTRO DE MAQUINA

--- a/registro_de_maquina.html
+++ b/registro_de_maquina.html
@@ -36,12 +36,9 @@
         <option value="correctivo">Correctivo</option>
       </select>
 
-      <label for="estadoMantenimiento">Estado de Mantenimiento:</label>
-      <input type="text" id="estadoMantenimiento" name="estadoMantenimiento" required>
-
       <button type="button" onclick="enviarFormulario()">Enviar</button>
     </form>
   </div>
-  <script src="public/JS/js.js"></script>
+  <script src="public/JS/registroMaquina.js"></script>
 </body>
 </html>
