--- a/diagnostico.html
+++ b/diagnostico.html
@@ -1,31 +1,23 @@
-<!DOCTYPE html>
+<!-- diagnostico.html -->
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./public/css/style.css">
-  
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
   <title>Diagnóstico Inicial</title>
-  </head>
+</head>
 <body>
   <img src="public/IMG/LOGO P.png" alt="LOGO" width="150">
-
-
   <h2>Diagnóstico Inicial</h2>
-    <div class="container">
-
-      
-        <form id="diagnosticoForm">
-          <label for="diagnostico">Diagnóstico:</label>
-          <textarea id="diagnostico" name="diagnostico" rows="4" required></textarea>
-          <button type="button" onclick="rechazar()">Rechazar</button>
-          <button type="button" onclick="aprobar()">Aprobar</button>
-        </form>
-      
-    </div>    
-
+  <div class="container">
+    <form id="diagnosticoForm">
+      <label for="diagnostico">Diagnóstico:</label>
+      <textarea id="diagnostico" name="diagnostico" rows="4" required></textarea>
+      <button type="button" onclick="rechazar()">Rechazar</button>
+      <button type="button" onclick="aprobar()">Aprobar</button>
+    </form>
+  </div>
   <script src="public/JS/diagnostico.js"></script>
 </body>
 </html>
+
