--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -30,8 +30,8 @@
         </form>    
     </div>
 
-  <script src="public/JS/js.js">
-    obtenerNumeroTicket();
+
+    <script src="public/JS/js.js"></script>
   </script>
 </body>
 </html>
