--- a/registroDeEmpresa.html
+++ b/registroDeEmpresa.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h2>Registro de Empresa</h2>
+  <img src="public/IMG/LOGO P.png" alt="LOGO" width="150">
   <div class="container">
     <form id="registroEmpresaForm" onsubmit="return false;">
       <!-- Agrega campos de formulario aquí -->
